namespace Player
{
    public static class PlayerAnimator
    {
        public static string Roll => "Roll";
        public static string SwordAttack => "SwordAttack";

        public static string TakeHit => "TakeHit";
        public static string Speed => "Speed";

        public static string Move => "Move";

        public static string Shoot => "Shoot";

        public static string Dead => "Dead";

        public static string PickUp => "PickUp";
    }
}