namespace Player
{
    public static class PlayerAnimator
    {
        public static string Roll => "Roll";
        public static string SwordAttack => "SwordAttack";
        public static string Shoot => "Shoot";
        public static string TakeHit => "TakeHit";
        public static string Speed => "Speed";
        public static string PickUp => "PickUp";
    }
}